made electric damage more readable; fixes

--- a/bestiary.css
+++ b/bestiary.css
@@ -78,7 +78,7 @@ span {
   color: #9933ff;
 }
 .elec {
-  color: #45ccff;
+  color: #95a0ff;
 }
 .necr {
   color: #663300;
